# siwe-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: eip1271.rs  eip6492.rs  lib.rs  nonce.rs
tests/: unit.rs  vectors.rs
tests/siwe/test/: parsing_positive.json  verification_negative.json  verification_positive.json
