[package]
name = "signinwithethereum"
version = "0.7.1"
authors = ["Spruce Systems, Inc.", "EthID.org"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementation of EIP-4361: Sign In With Ethereum"
repository = "https://github.com/signinwithethereum/siwe-rs"
exclude = ["tests", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
iri-string = "0.7"
hex = "0.4"
k256 = { version = "0.13", default-features = false, features = [
    "std",
    "ecdsa",
] }
sha3 = "0.10.8"
time = { version = "0.3", features = ["parsing", "formatting"] }
thiserror = "2"
http = "1.0.0"
rand = "0.10"
serde = { version = "1.0.164", optional = true }
alloy = { version = "1", optional = true, features = [
    "provider-http",
    "sol-types",
    "rpc-types",
    "network",
] }
typed-builder = { version = "0.23", optional = true }

[dev-dependencies]
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
